--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,5 +4,7 @@
 idf_component_register(
     SRCS main.c  wifi.c  timesetup.c   # list the source files of this component
     INCLUDE_DIRS       "." # optional, add here public include directories
-
+    
 )
+
+spiffs_create_partition_image(storage ../spiffs_image FLASH_IN_PROJECT)
